--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,24 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Всем привет! Это заголовок первого уровня</h1>
+        <h2>А это второго. Немного ссылок:</h2>
+        <ol>
+            <li>
+                <a
+                    href="https://ru.wikipedia.org/wiki/%D0%97%D0%B0%D0%B3%D0%BB%D0%B0%D0%B2%D0%BD%D0%B0%D1%8F_%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D0%B0"
+                    >Википедия</a
+                >
+            </li>
+            <li>
+                <a href="http://big-bang-online.com/season-1/"
+                    >Теория большого взрыва</a
+                >
+            </li>
+            <li>
+                <a href="https://pugjs.org/api/getting-started.html">Pug</a>
+            </li>
+        </ol>
+    </body>
 </html>
